changed font color

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -120,7 +120,7 @@ body{
 }
 .lightBlueBoxInfo{
     display: flex;
-    color:#f2994a;
+    color:#9ebbfd;
     font-size: 2.55vh;
     text-align: center;
     font-family: featureFont;
