--- a/Styles/style.css
+++ b/Styles/style.css
@@ -109,6 +109,7 @@ body{
     margin-right: 7%;
 }
 .lightBlueBoxImg{
+    height: 5vh;
     display: flex;
     align-self: center;
     margin-left: auto;
@@ -145,7 +146,7 @@ body{
 }
 
 .pc{
-    top: -8%;
+    top: -13%;
     left: -11%;
     position: relative;
     height: 80%;
